<resources>
    <string name="app_name">CC_MobileApp</string>
    <string name="title_homepage">Homepage</string>

    <!-- for client -->
    <string name="client_id">Client ID</string>
    <string name="sitemap">Site Map</string>
    <string name="supplier">Supplier</string>
    <string name="client">Client</string>
    <string name="visualize">Visualize</string>
    <string name="product">Product</string>
    <string name="stocks">Stocks</string>
    <string name="client_added">Client Successfully Added</string>

    <!-- general use -->
    <string name="company_name">Company Name</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="contact_num">Contact Number</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="errorEmail">Invalid Email Address</string>
    <string name="errorPhoneNum">Invalid Phone Number</string>
    <string name="search">Search Product Name</string>
    <string name="searchbtn">Search</string>
    <string name="rowNum_error">Only can type 1 or 2</string>
    <!-- all page title name -->
    <string name="add_client"><b>Add Client</b></string>

    <!-- sign up & login-->
    <string name="username">User Name</string>
    <string name="hpNum">Contact Number</string>
    <string name="psw">Password</string>
    <string name="repeatPsw">Repeat Password</string>
    <string name="loginMsg"><u>Already have an account? <b>Login</b></u></string>
    <string name="signupMsg"><u>No have an account? <b>Register</b></u></string>
    <string name="showPsw">Show Password</string>
    <string name="verificationCode">Verification Code</string>
    <string name="newPsw">New Password</string>
    <string name="forgtPsw">Forgot Password</string>
    <string name="reset_Psw">Reset Password</string>
    <string name="btncontinue">Continue</string>
    <string name="back">Back</string>
    <string name="working_pos">Working Position</string>
    <string name="working_status">Working Status</string>
    <string name="resetPswMsg">To reset your password,enter your email,
    press continue button and check your email to follow instructions</string>
    <string-array name="themeSpinner">
        <item>Bright Theme</item>
        <item>Dark Theme</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- error string -->
    <string name="error_field_required">This Field is Required</string>
    <string name="error">Error: %15s</string>
    <string name="email_format_error">The email address format is incorrect</string>
    <string name="phone_format_error">The phone number format is incorrect</string>
    <string name="exist_clientname_error">Client Company Name is already exist</string>
    <string name="only_integer_error">Only integer is allow</string>
    <string name="prod_nonzero_error">Product Quantity cannot be zero</string>
    <string name="invalid_nonexist_error">The input is non-exist in the record</string>
    <string name="rack_occupied_error">Rack is occupied</string>
    <string name="rack_occupiedontemp_error">Occupied rack id in your stock detail</string>
    <string name="prodPrice_nonzero_error">Product Price cannot be zero</string>
    <string name="insufficientstock_error">Insufficient stock quantity</string>
    <string name="stock_nonzero_error">Stock Quantity cannot be zero</string>
    <string name="exist_stockDetailProd_error">Product is already in stock detail</string>
    <string name="supplier_noProd_error">The supplier do provide any product yet</string>
    <string name="phone_format_10_11_error">Phone Number format required is 01xxxxxxxx(x)</string>


    <!-- update msg -->
    <string name="client_info_remain">Client information remain unchanged</string>
    <string name="stockedit_info_remain">Stock Detail Remain Unchanged</string>
    <string name="prodedit_info_remain">Product information Remain Unchanged</string>
    <string name="stockdetail_success">Stock Detail Update Successfully</string>
    <string name="prodInfo_success">Product Information Update Successfully</string>
    <string name="clientInfo_success">Client Information Update Successfully</string>
    <string name="client_delete_success">Client Successfully Deleted</string>
    <string name="prod_delete_success">Product Successfully Deleted</string>
    <string name="stockdetail_delete_success">Stock Detail successfully deleted</string>
    <string name="only_priceformat_error">Only price format is allowed</string>
    <string name="exist_prodBarcode_error">The Barcode is already exist</string>

    <!-- product -->
    <string name="title_activity_product__main">Product_Main</string>
    <string name="prodAddSuccess">Product Added Successfully</string>
    <string name="quantity">Quantity</string>
    <string name="prod_desc">prodDesc</string>
    <string name="prod_supplier">prodSupplier</string>

    <!--supplier-->
    <string name="editSupTitle">Edit Supplier</string>
    <string name="addSupTitle">Add Supplier</string>
    <string name="supplier_id">Supplier ID</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_status">Collaboration Status</string>
    <string name="supplier_added">Supplier Successfully Added</string>
    <string name="supplier_displayed">Supplier Successfully Displayed</string>
    <string name="supplier_edited">Supplier Successfully Edited</string>
    <string name="existSupMsg">This Company Name is exist</string>

    <!--Product Name-->
    <string name="rackName1">Rack1</string>
    <string name="rackName2">Rack2</string>
    <string name="rackName3">Rack3</string>
    <string name="rackName4">Rack4</string>
    <string name="rackName5">Rack5</string>

    <string name="rackName6">Rack6</string>
    <string name="rackName7">Rack7</string>
    <string name="rackName8">Rack8</string>
    <string name="rackName9">Rack9</string>
    <string name="rackName10">Rack10</string>

    <string name="rackName11">Rack11</string>
    <string name="rackName12">Rack12</string>
    <string name="rackName13">Rack13</string>
    <string name="rackName14">Rack14</string>
    <string name="rackName15">Rack15</string>

    <string name="rackName16">Rack16</string>
    <string name="rackName17">Rack17</string>
    <string name="rackName18">Rack18</string>
    <string name="rackName19">Rack19</string>
    <string name="rackName20">Rack20</string>

    <!--Map Rack Location-->
    <string name="rack_A">A</string>
    <string name="rack_B">B</string>
    <string name="rack_C">C</string>
    <string name="rack_D">D</string>
    <string name="rack_E">E</string>
    <string name="rack_F">F</string>
    <string name="rack_G">G</string>

    <string name="rack_1">1</string>
    <string name="rack_2">2</string>
    <string name="rack_3">3</string>
    <string name="rack_4">4</string>
    <string name="rack_5">5</string>
    <string name="rack_6">6</string>
    <string name="rack_7">7</string>
    <string name="rack_8">8</string>
    <string name="rack_9">9</string>
    <string name="rack_10">10</string>

    <!--Rack String-->
    <string name="existRackMsg">This Rack with this row number is exist</string>
    <string name="existRackLotMsg">This location is located other racks</string>
    <string name="addRackTitle">Add Rack</string>
    <string name="displayRackTitle">Display Rack</string>
    <string name="rack_id">Rack ID</string>
    <string name="rack_number">Rack Number</string>
    <string name="rack_name">Rack Name</string>
    <string name="rack_startLot">Start Location</string>
    <string name="rack_endLot">End Location</string>
    <string name="rack_rowNum">Row Number</string>
    <string name="rack_rowNum1">Row 1</string>
    <string name="rack_rowNum2">Row 2</string>
    <string name="rack_rowNum3">Row 3</string>
    <string name="rack_added">Rack Successfully Added</string>
    <string name="rack_displayed">Rack Successfully Displayed</string>
    <string name="rack_edited">Rack Successfully Edited</string>


    <string name="entrance">Entrance</string>
    <string name="title_activity_rackdetails_display">rackdetails_display</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!--Report String-->
    <string name="report_type">Report Type</string>
    <string name="prod_name">Product</string>
    <string name="prod_barcode">Barcode</string>
    <string name="current_qty">Current Quantity </string>
    <string name="qty_num">Qty</string>
    <string name="prod_report">Product Report</string>
    <string name="stock_report">Stock Report</string>
    <string name="stock_in">Stock In</string>
    <string name="stock_out">Stock Out</string>
    <string name="report_info">Report Information</string>
    <string name="date_start">Start Date</string>
    <string name="date_end">End Date</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Stock -->
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="total_price">Total Price: </string>
    <string name="price">Price</string>
    <string name="stock_id">ID</string>

    <!-- button -->
    <string name="next">NEXT</string>
    <string name="cancel">CANCEL</string>
    <string name="in">IN</string>
    <string name="out">OUT</string>

    <!--title -->
    <string name="report">Report</string>
    <string name="profile">Profile</string>
    <string name="resetPsw">Reset Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="add_new_stock_in_detail">Add New Stock In Detail</string>
    <string name="staff">Staff Management</string>
    <string name="reports">Data Visualization</string>
    <string name="logout">Log Out</string>


    <!--staff-->
    <string name="staffName">Staff Name</string>
    <string name="editStaffTitle">Edit Staff</string>
    <string name="staff_edited">Edit Staff Successfully</string>
    <string name="error_pos">You can either enter "Staff" or "Top Management"</string>
    <string name="NoResults">\"No information is placed under this \"</string>
    <string name="staff_info_remain">Staff Information Remain Unchanged</string>
    <string name="supplier_info_remain">Supplier Info Remain Unchanged</string>
    <string name="staff_deleted">Staff is resigned successfully</string>
    <string name="supplier_deleted">Supplier is deleted successfully</string>
    <string name="search_not_found">No result is found</string>
    <string name="date_invalid_msg">Invalid Date</string>
</resources>

