<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_homepage"
        android:title="@string/title_homepage"
        android:icon="@drawable/ic_home_icon">
    </item>

    <item
        android:id="@+id/item_userMgmt"
        android:title="@string/profile"
        android:icon="@drawable/ic_user_icon">
    </item>

    <item
        android:id="@+id/item_product"
        android:title="@string/product"
        android:icon="@drawable/ic_product_icon">
    </item>

    <item
        android:id="@+id/item_stockIn"
        android:title="@string/stock_in"
        android:icon="@drawable/ic_stockin_icon">
    </item>

    <item
        android:id="@+id/item_stockOut"
        android:title="@string/stock_out"
        android:icon="@drawable/ic_stockout_icon">
    </item>

    <item
        android:id="@+id/item_sitemap"
        android:title="@string/sitemap"
        android:icon="@drawable/ic_sitemap_icon">
    </item>

    <item
        android:id="@+id/item_client"
        android:title="@string/client"
        android:icon="@drawable/ic_client_icon">
    </item>

    <item
        android:id="@+id/item_supplier"
        android:title="@string/supplier"
        android:icon="@drawable/ic_supplier_icon">
    </item>

    <item
        android:id="@+id/item_manageStaff"
        android:title="@string/staff"
        android:icon="@drawable/ic_position_icon">
    </item>

    <item
        android:id="@+id/item_report"
        android:title="@string/reports"
        android:icon="@drawable/ic_visualdata_icon">
    </item>

    <item
        android:id="@+id/item_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout_icon">
    </item>
</menu>