<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00678880"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_visualizeData"
        style="@style/homepage_btn"
        android:layout_marginStart="224dp"
        android:layout_marginTop="232dp"
        android:background="@drawable/homepg_btn"
        android:drawableTop="@drawable/ic_visualdata_icon"
        android:text="@string/visualizeData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_client"
        style="@style/homepage_btn"
        android:layout_marginStart="56dp"
        android:layout_marginTop="232dp"
        android:background="@drawable/homepg_btn"
        android:drawableTop="@drawable/ic_client_icon"
        android:text="@string/client"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_product"
        style="@style/homepage_btn"
        android:layout_marginStart="64dp"
        android:layout_marginTop="420dp"
        android:background="@drawable/homepg_btn"
        android:drawableTop="@drawable/ic_product_icon"
        android:text="@string/product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_stocks"
        style="@style/homepage_btn"
        android:layout_marginStart="236dp"
        android:layout_marginTop="420dp"
        android:background="@drawable/homepg_btn"
        android:drawableTop="@drawable/ic_stock_icon"
        android:text="@string/stocks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btn_sitemap"
        style="@style/homepage_btn"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/homepg_btn"
        android:drawableTop="@drawable/ic_sitemap_icon"
        android:text="@string/sitemap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_supplier"
        style="@style/homepage_btn"
        android:layout_marginStart="236dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/homepg_btn"
        android:drawableTop="@drawable/ic_supplier_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/supplier" />

</androidx.constraintlayout.widget.ConstraintLayout>